[package]
name = "procedural_map"
version = "0.1.0"
authors = ["Jan Reitz <jan-reitz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
rand = "0.8"

[[example]]
name = "basic"
path = "src/basic.rs"
